--- a/index.html
+++ b/index.html
@@ -3,15 +3,67 @@
 <head>
 	<title>Model Agency</title>
 	<meta charset="utf-8">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="font.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 	<script type="text/javascript" src="custom.js"></script>
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="fontawesome/css/all.min.css">
 </head>
 <body>
+	<div id="banner">
+		<nav class="navbar navbar-expand-lg navbar-light">
+			<a class="navbar-brand" href="#"> <img src="images/a.jpg" width="30" height="30" alt=""></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Model</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Blog</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contact</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Sign In | Sign Up</a>
+					</li>
+
+
+
+				</ul>
+
+			</div>
+		</nav>
+	</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-3 col-md-6 col-sm-6 col-6">
+			<span class="fa-stack fa-2x"><i class="fasfa-circle fa-stack-2x"></i> 
+				<i class="far fa-gem fa-stack-1x fa-inverse"> </i>
+			</span>
+			<h4 class="mt-5"> Finding Agency</h4>
+			<p class="text-left mt-3"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat.</p>
+		</div>
+	</div>
+</div>
 
 </body>
 </html>
